--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -21,3 +21,11 @@ jobs:
           version: v1.45.1 # without patch version
           only-new-issues: false # show only new issues if it's a pull request
           args: --timeout=10m --build-tags=race
+
+      - name: Run linter on nightly
+        uses: golangci/golangci-lint-action@v3.1.0 # Action page: <https://github.com/golangci/golangci-lint-action>
+        with:
+          version: v1.45.1 # without patch version
+          only-new-issues: false # show only new issues if it's a pull request
+          args: --timeout=10m --build-tags=race,nightly
+
