chore: update CI
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -26,8 +26,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        go: ["1.19"]
-        os: ["ubuntu-latest"]
+        go: [ stable ]
+        os: [ "ubuntu-latest" ]
     steps:
       - name: Set up Go ${{ matrix.go }}
         uses: actions/setup-go@v4 # action page: <https://github.com/actions/setup-go>
