--- a/tests/configs/.rr-http-otel.yaml
+++ b/tests/configs/.rr-http-otel.yaml
@@ -19,11 +19,14 @@ http:
     destroy_timeout: 1s
 
 otel:
+  resource:
+    service_name: "rr_test"
+    service_version: "1.0.0"
+    service_namespace: "RR-Shop"
+    service_instance_id: "UUID"
   insecure: false
   compress: true
   exporter: stderr
-  service_name: rr_test
-  service_version: 1.0.0
 
 logs:
   mode: development
