--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -65,6 +65,10 @@ jobs:
       - name: Install Go dependencies
         run: go mod download
 
+      - name: Run HTTP unit tests with coverage
+        run: |
+          go test -timeout 20m -v -race -cover -tags=debug -failfast -coverpkg=$(cat ./tests/pkgs.txt) -coverprofile=./tests/coverage-ci/httpu.out -covermode=atomic ./handler
+
       - name: Run golang tests with coverage
         run: |
           cd tests
@@ -83,12 +87,9 @@ jobs:
 
           docker-compose -f env/docker-compose-otel.yaml up -d
           sleep 30
-          go test -timeout 20m -v -race -cover -tags=debug -failfast -coverpkg=$(cat pkgs.txt) -coverprofile=./coverage-ci/http.out -covermode=atomic ./...
-          docker compose -f env/docker-compose-otel.yaml down
+          go test -timeout 20m -v -race -cover -tags=debug -failfast -coverpkg=$(cat pkgs.txt) -coverprofile=./coverage-ci/http.out -covermode=atomic attributes_test.go handler_test.go http_otlp_test.go http_plugin2_test.go http_plugin3_test.go http_plugin4_test.go http_plugin_test.go uploads_test.go
 
-      - name: Run HTTP unit tests with coverage
-        run: |
-          go test -timeout 20m -v -race -cover -tags=debug -failfast -coverpkg=$(cat ./tests/pkgs.txt) -coverprofile=./tests/coverage-ci/httpu.out -covermode=atomic ./...
+          docker compose -f env/docker-compose-otel.yaml down
 
       - name: Archive code coverage results
         uses: actions/upload-artifact@v3
