fix: update otel collector configuration
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/tests/env/otel-collector-config.yml
+++ b/tests/env/otel-collector-config.yml
@@ -2,11 +2,13 @@ receivers:
   otlp:
     protocols:
       grpc:
+        endpoint: 0.0.0.0:4317
       http:
+        endpoint: 0.0.0.0:4318
 
 exporters:
-  logging:
-    loglevel: debug
+  debug:
+
   zipkin:
     endpoint: "http://zipkin:9411/api/v2/spans"
 
@@ -14,4 +16,4 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [zipkin, logging]
+      exporters: [zipkin, debug]
